--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  border: 8px;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px 16px 8px 16px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  display: block;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 10px auto;
+  padding: 8px 24px; 
+   
 }
